# hackage-stats

./: .gitignore  .travis-setup.sh  .travis.yml  LICENSE  README.md  build_docs.sh  cloc.sh  graph6.gephi  hackage-info.cabal  hackage-stats.cabal  index.html  mathematica_graph.txt  stack-8.0.yaml  stack.yaml  stats.json
app/: Main.hs
data/: graph.csv  (+2 more)
hackage-info/: hackage-info.cabal  links.txt  notes.md
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/doc/prim-spoon-0.1.0/: LICENSE
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/flag-cache/: basic-0.1.0.0-6a14f5e8a63d9ef15a3da2b11fc6b822  basic-0.1.0.0-74d0d2dfeb6f053f15e31b27d8a333fd  basic-0.1.0.0-947be1a81149705111a3b458555a88a1  basic-0.1.0.0-99a99ba1b2ceddf2a30d8b1970dcc92a  basic-0.1.0.0-ef09ff91ab50f622db029badae012e71  curl-1.3.8-b53d87036ec08f3284be04232534d970  hackage-info-0.1.0.0-1d4f3d89117c245d2c460ca40ce6acdb  hackage-info-0.1.0.0-694bb5d41b3a2814ced4a026f82fe807  prim-spoon-0.1.0-4adf16780630406819c13b6a09e35ac5
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/lib/x86_64-osx-ghc-7.10.3/basic-0.1.0.0-6wwv6JzvqNAFjjBCLzB6tO/: Lib.dyn_hi  Lib.hi  Mathematica.dyn_hi  Mathematica.hi  Package.dyn_hi  Package.hi  Parse.dyn_hi  Parse.hi  Process.dyn_hi  Process.hi  libHSbasic-0.1.0.0-6wwv6JzvqNAFjjBCLzB6tO-ghc7.10.3.dylib
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/lib/x86_64-osx-ghc-7.10.3/basic-0.1.0.0-6wwv6JzvqNAFjjBCLzB6tO/Data/: Repo.dyn_hi  Repo.hi
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/lib/x86_64-osx-ghc-7.10.3/basic-0.1.0.0-9GGsbf8xdhq03y2re8JWyM/: Lib.dyn_hi  Lib.hi  libHSbasic-0.1.0.0-9GGsbf8xdhq03y2re8JWyM-ghc7.10.3.dylib
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/lib/x86_64-osx-ghc-7.10.3/basic-0.1.0.0-CoxpkCbDdG52FL5ykgIAM4/: Lib.dyn_hi  Lib.hi  Mathematica.dyn_hi  Mathematica.hi  Package.dyn_hi  Package.hi  Parse.dyn_hi  Parse.hi  Process.dyn_hi  Process.hi  libHSbasic-0.1.0.0-CoxpkCbDdG52FL5ykgIAM4-ghc7.10.3.dylib
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/lib/x86_64-osx-ghc-7.10.3/basic-0.1.0.0-CoxpkCbDdG52FL5ykgIAM4/Data/: Repo.dyn_hi  Repo.hi
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/lib/x86_64-osx-ghc-7.10.3/basic-0.1.0.0-DFvQokbQCpnGgHZP9adzzA/: Lib.dyn_hi  Lib.hi  Mathematica.dyn_hi  Mathematica.hi  Package.dyn_hi  Package.hi  Process.dyn_hi  Process.hi  libHSbasic-0.1.0.0-DFvQokbQCpnGgHZP9adzzA-ghc7.10.3.dylib
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/lib/x86_64-osx-ghc-7.10.3/basic-0.1.0.0-JpNM47q3wAg0u8sgsidnIp/: Lib.dyn_hi  Lib.hi  Mathematica.dyn_hi  Mathematica.hi  Package.dyn_hi  Package.hi  Parse.dyn_hi  Parse.hi  Process.dyn_hi  Process.hi  libHSbasic-0.1.0.0-JpNM47q3wAg0u8sgsidnIp-ghc7.10.3.dylib
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/lib/x86_64-osx-ghc-7.10.3/hackage-info-0.1.0.0-8AzqFXcXsXI1zCeqNUsPcm/: Lib.dyn_hi  Lib.hi  Package.dyn_hi  Package.hi  Parse.hi  Process.dyn_hi
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/lib/x86_64-osx-ghc-7.10.3/hackage-info-0.1.0.0-AE0il87ACj83gbjQ2XcmJf/: Lib.dyn_hi  Lib.hi  Mathematica.dyn_hi  Mathematica.hi  Package.dyn_hi  Package.hi  Parse.dyn_hi  Parse.hi  Process.dyn_hi  Process.hi  libHShackage-info-0.1.0.0-AE0il87ACj83gbjQ2XcmJf-ghc7.10.3.dylib
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/lib/x86_64-osx-ghc-7.10.3/prim-spoon-0.1.0-047ya4acd2x9ayYdP6CABK/: libHSprim-spoon-0.1.0-047ya4acd2x9ayYdP6CABK-ghc7.10.3.dylib
hackage-info/.stack-work/install/x86_64-osx/lts-5.14/7.10.3/pkgdb/: basic-0.1.0.0-99a99ba1b2ceddf2a30d8b1970dcc92a.conf  hackage-info-0.1.0.0-a5e71452a58ed9e7886345808cdc6b0a.conf  package.cache  prim-spoon-0.1.0-4adf16780630406819c13b6a09e35ac5.conf
hackage-info/app/: Main.hs
hackage-info/graph/: Main.hs
hackage-info/src/: Mathematica.hs  Package.hs  Parse.hs  Process.hs
hackage-info/src/Data/: Repo.hs
(+29 files in other folders)
