name:                hackage-stats
version:             0.1.0.0
synopsis:            Get some 
description:         Please see README.md
homepage:            https://github.com/michaeljklein/hackage-stats
license:             BSD3
license-file:        LICENSE
author:              Michael Klein
maintainer:          lambdamichael@gmail.com
copyright:           2016 Michael Klein
category:            git
cabal-version:       >=1.10
build-type: Simple

library
  hs-source-dirs:      src
  exposed-modules:     Process
                     , Mathematica
                     , Package
                     , Parse
                     , Data.Repo
  build-depends:       base >= 4.7 && < 5
                     , aeson
                     , attoparsec
                     , curl
                     , lens
                     , prim-spoon
                     , process
                     , text
  default-language:    Haskell2010

executable hackage-stats
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , attoparsec
                     , bytestring
                     , hackage-stats
                     , lens
                     , text
  default-language:    Haskell2010

executable hackage-graph
  hs-source-dirs:      graph
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , aeson
                     , attoparsec
                     , bytestring
                     , containers
                     , hackage-stats
                     , lens
                     , text
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaeljklein/hackage-stats
