name:                hackage-info
version:             0.1.0.0
synopsis:            Get some 
description:         Please see README.md
homepage:            https://github.com/michaeljklein/hackage-info
license:             BSD3
license-file:        LICENSE
author:              Michael Klein
maintainer:          lambdamichael@gmail.com
copyright:           2016 Michael Klein
category:            git
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
                     , Process
                     , Mathematica
                     , Package
                     , Parse
                     , Data.Repo
  build-depends:       base >= 4.7 && < 5
                     , prim-spoon
                     , process
                     , attoparsec
                     , text
                     , lens
                     , aeson
                     , curl
  default-language:    Haskell2010

executable hackage-info
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hackage-info
                     , lens
                     , text
                     , attoparsec
                     , aeson
                     , bytestring
  default-language:    Haskell2010

executable hackage-graph
  hs-source-dirs:      graph
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , hackage-info
                     , lens
                     , text
                     , attoparsec
                     , aeson
                     , bytestring
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/michaeljklein/hackage-info
